--- a/SouceCode/AgilePointAPI/AgilePointAPI.csproj
+++ b/SouceCode/AgilePointAPI/AgilePointAPI.csproj
@@ -78,6 +78,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Task.cs" />
     <Compile Include="WorkflowInstance.cs" />
+    <Compile Include="WorkflowInstanceManager.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config">
