--- a/SouceCode/AgilePointAPI/App.config
+++ b/SouceCode/AgilePointAPI/App.config
@@ -193,7 +193,7 @@
       </endpoint>
       <endpoint address="net.tcp://192.168.0.151:13488/AgilePointServer/Admin" binding="netTcpBinding" bindingConfiguration="NetTcpBinding_IWCFAdminService" contract="AdminService.IWCFAdminService" name="NetTcpBinding_IWCFAdminService" behaviorConfiguration="AgilePointServiceBehavior">
         <identity>
-          <userPrincipalName value="administrator@shsongz.com"/>
+          <userPrincipalName value="apdomain\\administrator"/>
         </identity>
       </endpoint>
       <endpoint address="http://192.168.0.26:13489/AgilePointServer/Admin" binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IWCFAdminService" contract="AdminService.IWCFAdminService" name="BasicHttpBinding_IWCFAdminService" behaviorConfiguration="AgilePointServiceBehavior"/>
